name:                vision
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/massiv>
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18


executable vision
  main-is: Vision.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , massiv
              , massiv-io
  default-language: Haskell2010

executable avg-sum
  main-is: AvgSum.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , massiv
              , massiv-io
              , data-default
  default-language: Haskell2010


executable mkfilter
  main-is: MakeFilter.hs
  hs-source-dirs: app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , massiv
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
